--- a/ide/package.json
+++ b/ide/package.json
@@ -14,7 +14,6 @@
     }
   },
   "dependencies": {
-    "@extension/ide-ext": "1.0.0",
     "@theia/bulk-edit": "1.22.1",
     "@theia/callhierarchy": "1.22.1",
     "@theia/console": "1.22.1",
@@ -57,21 +56,7 @@
   },
   "scripts": {
     "clean": "theia clean",
-    "build": "yarn -s compile && yarn -s bundle",
-    "bundle": "theia build --mode development",
-    "compile": "tsc -b",
-    "coverage": "yarn -s test --test-coverage && yarn -s coverage:report",
-    "coverage:clean": "rimraf .nyc_output && rimraf coverage",
-    "coverage:report": "nyc report --reporter=html",
-    "rebuild": "theia rebuild:browser --cacheRoot ../..",
-    "start": "yarn -s rebuild && theia start --plugins=local-dir:../../plugins",
-    "start:debug": "yarn -s start --log-level=debug",
-    "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
-    "test": "yarn -s rebuild && theia test . --plugins=local-dir:../../plugins --test-spec=../api-tests/**/*.spec.js",
-    "test:debug": "yarn -s test --test-inspect",
-    "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
-    "watch:bundle": "theia build --watch --mode development",
-    "watch:compile": "tsc -b -w"
+    "build": "theia build --mode development"
   },
   "devDependencies": {
     "@theia/cli": "1.22.1"
