--- a/ide-ext/package.json
+++ b/ide-ext/package.json
@@ -8,7 +8,8 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@theia/core": "1.22.1"
+    "@theia/core": "1.22.1",
+    "@theia/plugin-ext": "1.22.1"
   },
   "devDependencies": {
     "@extension/api": "^1.0.0"
