--- a/ide/package.json
+++ b/ide/package.json
@@ -14,6 +14,7 @@
     }
   },
   "dependencies": {
+    "@extension/ide-ext": "1.0.0",
     "@theia/bulk-edit": "1.22.1",
     "@theia/callhierarchy": "1.22.1",
     "@theia/console": "1.22.1",
