--- a/ide-ext/package.json
+++ b/ide-ext/package.json
@@ -16,7 +16,8 @@
   },
   "theiaExtensions": [
     {
-      "frontend": "lib/module"
+      "frontend": "lib/frontend",
+      "backend": "lib/backend"
     }
   ]
 }
