--- a/ide-ext/package.json
+++ b/ide-ext/package.json
@@ -5,14 +5,13 @@
   "description": "Theia - Example code to demonstrate Theia API",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "scripts": {
+    "clean": "git clean -f -x ./node_modules ./lib",
     "build": "tsc"
   },
   "dependencies": {
+    "@extension/api": "1.0.0",
     "@theia/core": "1.22.1",
     "@theia/plugin-ext": "1.22.1"
-  },
-  "devDependencies": {
-    "@extension/api": "^1.0.0"
   },
   "theiaExtensions": [
     {
