Wire up messaging

--- a/ide-ext/package.json
+++ b/ide-ext/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@extension/api": "1.0.0",
     "@theia/core": "1.22.1",
+    "@theia/plugin": "1.22.1",
     "@theia/plugin-ext": "1.22.1"
   },
   "theiaExtensions": [
