--- a/api/package.json
+++ b/api/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "license": "MIT",
   "types": "./index.d.ts",
-  "repository": "https://github.com/thegecko/vscode-theia-extension"
+  "repository": "https://github.com/thegecko/vscode-theia-extension",
+  "dependencies": {
+    "@types/vscode": "^1.50.0"
+  }
 }
